# forty-scripts

./: Cargo.toml  Makefile
c/: .forty.c.swp  forty.c  protocol.h
specs/cells/: always  forty
src/: lib.rs
testkit/: Cargo.toml
testkit/src/: always.rs  facility.rs  loader.rs
