[package]
name = "randao"
version = "0.1.0"
authors = ["keroro520 <keroroxx520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testkit = { path = "./testkit" }
ckb-types = { git = "https://github.com/Taem42/ckb.git", rev = "4b8cb7c" }
ckb-script = { git = "https://github.com/Taem42/ckb.git", rev = "4b8cb7c" }
lazy_static = "1.3.0"
molecule = "=0.4.0"
rand = "0.6.5"

[workspace]
members = [
    "testkit",
]
